Adds OTP and some initial auth
